Mon Mar 22 19:03:23 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html: Rephrase and clarify entry for url_part_aliases.
	(From Hans-Peter Nilsson, Mar 2)

Mon Mar 22 18:48:10 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Synonym.cc: Fix minor memory leak.

	* htlib/Dictionary.h, htlib/Dictionary.cc(hashCode): Check if key
	can be converted to an integer using strtol. If so, use the
	integer as the hash code.  (Geoff's patch)

Mon Mar 22 18:23:11 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/List.cc(Nth): Check for out-of-bounds requests before
	doing anything.

Mon Mar 22 17:50:47 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(display): Free DocumentRef memory after
	displaying them.
	(displayMatch): Fix memory leak when documents did not have anchors,
	fix problems when documents did not have descriptions.

Mon Mar 22 17:32:14 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htmerge/docs.cc(convertDocs): Replace previous verbose patch
	with H-P Nilsson's.

Mon Mar 22 17:13:35 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Plaintext.cc, htmerge/words.cc: removed Log lines.

Mon Mar 22 16:11:31 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc: Add patch from Jerome Alet <alet@unice.fr>
	to allow '.' in config field but NOT './' for security reasons.

Mon Mar 22 15:56:55 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* installdir/long.html, installdir/short.html: Write out HTML
	versions of the builtin templates.  (committed to 3.1.2 by Gilles)

	* installdir/htdig.conf: Add commented-out template_map and
	template_name attributes to use the on-disk versions.

Mon Mar 22 15:13:33 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc, htdoc/attrs.html: Change default locale
	to "C", as H-P Nilsson recommended.

	* htlib/Configuration.cc(Add): Fix small memory leak in locale code,